2009-01-15 Richard Dale <richard.j.dale@gmail.com>
* Allow Ruby Date and Time instances to be passed to the Wt::WDate and 
Boost::Any constructors
* Remove the optimization in the mark function to only traverse the tree of 
children of WObjects which don't have parents and always traverse instead.

2009-01-11 Richard Dale <richard.j.dale@gmail.com>
* Added a wt.rb file that is installed and will pull in either 'wthttp' or the
'wtfcgi' extensions according to the value of the 'WT_ENV' environment variable
* Add '#!/usr/bin/ruby' to the example program sources

2008-12-28 Richard Dale <richard.j.dale@gmail.com>
* Instead of a single 'wt' ruby extension linked against libwthttp, build two
ruby extensions 'wthttp' and 'wtfcgi' linked against the http and fcgi 
connectors respectively. 
* Wt::Ruby programs, such as the examples, could still have require 'wt' 
statements, and they could be set up to actually pull in either the 'wthttp'
or 'wtfcgi' extension according to whether they are to be used in a 
development or production environment. For instance, in wt.rb:

    if ENV['WT_ENV'] == 'production'
      require 'wtfcgi'
    elsif ENV['WT_ENV'] == 'development'
      require 'wthttp'
    end

* Removed redundant copies of the Ext javascript code in the examples

2008-12-26 Richard Dale <richard.j.dale@gmail.com>
* Stateless slots cannot have any arguments, however they can be connected to
signals which have arguments. So when an EventSignal is connected to a slot
with arity zero then check for whether the slot is stateless.
* Fixed some bugs in the treelist example.

2008-12-24 Richard Dale <richard.j.dale@gmail.com>
* Added an ancestors() method for the Wt:: classes
* Rename classnameMap as IdToClassNameMap to be consistent with QtRuby

2008-12-23 Richard Dale <richard.j.dale@gmail.com>
* Added an implementation of stateless slots. Example usage:

    implementStateless(:showIcon1, :undoShowIcon1)

2008-12-19 Richard Dale <richard.j.dale@gmail.com>